fixed dependabot issues
